# wescon-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
ctrl/notebooks/dev/: intersection_2d.ipynb
ctrl/remakefiles/: extract_convert_nimrod_dat_to_nc.py  proj_config.py  wescon_radar_dev.py
ctrl/scripts/dev/: 3D_winds_initial_expts.py
output/camra/: nicol_updraft.py
src/input/camra/: load_camra_l1.py
src/output/camra/: nicol_updraft.py
src/wescon_tools/: custom_osgb.py  flow_interp.py  radar_intersection.py  radarnet_composite.py  util.py
